[package]
name = "wots-rs"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Implementation of the Winternitz One-time Signature Scheme made using Rust"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/wots-rs"
repository = "https://github.com/CipherDogs/wots-rs"
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
sha256-rs = "1.0"
